fix some vertical align css

--- a/source/scss/globals.scss
+++ b/source/scss/globals.scss
@@ -44,6 +44,9 @@ blockquote p {
 }
 
 .contentWrapper {
+    p {
+        margin-top: 0 !important;
+    }
 	h1 {
 		font-weight: 700;
 	}
